# enterprise-rag

./: .gitignore  docker-compose.prod.yml  start.ps1  start.sh
backend/: .env.template  .gitignore  Dockerfile  Dockerfile.worker  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/app/: main.py  worker.py
backend/app/api/: deps.py
backend/app/api/v1/: analytics.py  api_keys.py  auth.py  conversations.py  documents.py  feedback.py  knowledge_bases.py  rag.py  router.py  sso.py
backend/app/core/: config.py  database.py  exception_handlers.py  exceptions.py  logger.py  rbac.py
backend/app/infrastructure/: embedding_client.py  llm_client.py  qdrant_client.py
backend/app/middleware/: request_id.py
backend/app/models/database/: __init__.py  api_key.py  base.py  conversation.py  document.py  knowledge_base.py  user.py
backend/app/models/request_response/: response.py
backend/app/parsers/: base.py  docx_parser.py  markdown_parser.py  pdf_parser.py  registry.py  text_parser.py
backend/app/prompts/: registry.py
backend/app/rag/: bm25_retriever.py  context_builder.py  fusion.py  pipeline.py  query_rewriter.py  reranker.py
backend/app/repositories/: api_key_repository.py  conversation_repository.py  document_repository.py  kb_repository.py  user_repository.py
backend/app/services/: auth_service.py  conversation_service.py  doc_status_subscriber.py  document_service.py  kb_service.py  oidc_service.py  rag_service.py
backend/app/utils/: security.py  text_splitter.py
backend/eval/: queries.jsonl
backend/eval/results/: bm25_baseline.json  hybrid_baseline.json  loadtest_chat.json  loadtest_search_hybrid.json  vector_baseline.json
backend/migrations/: env.py
backend/migrations/versions/: 1a32c7f3a1e5_initial_baseline.py  6a6e54b799c2_create_all_tables.py  b2f8c1d4e5a6_add_bm25_search_vector.py  c3d9e2f1a4b5_create_api_keys.py  ed0afde051b0_create_all_tables.py
backend/nginx/: nginx.conf
backend/scripts/: evaluate_retrieval.py  load_test.py
backend/tests/: conftest.py
backend/tests/unit/: test_analytics.py  test_api.py  test_api_extended.py  test_api_keys.py  test_core.py  test_core_extended.py  test_deep_coverage.py  test_doc_status_subscriber.py  test_doc_status_subscriber_loop.py  test_docx_parser.py  test_feedback.py  test_hybrid_retrieval.py  test_infrastructure.py  test_multi_kb.py  test_multi_turn.py  test_parsers.py  test_pdf_parser_real.py  test_rag.py  test_rag_extended.py  test_rbac.py  test_repositories.py  test_repositories_extended.py  test_search_api.py  test_services.py  test_services_extended.py  test_services_extra.py  test_sso.py  test_worker.py
docs/: ADR.md  API.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DATABASE.md  DEPLOYMENT.md  K8S.md  PRD.md  README.md  ROADMAP.md  TASKS.md  TEST_PLAN.md
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts
k8s/: api.yaml  configmap.yaml  redis.yaml  (+8 more)
(+54 files in other folders)
