[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "enterprise-rag"
version = "1.0.0"
description = "企业级智能知识库 RAG 系统"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "RAG 开发团队"},
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "redis>=5.0.0",
    "httpx>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.2.0",
    "python-multipart>=0.0.9",
    "qdrant-client>=1.9.0,<1.10",  # Qdrant server 1.9.x；client 1.10+ 移除了 search()，主版本需对齐
    "openai>=1.30.0",
    "tiktoken>=0.7.0",
    "pymupdf>=1.24.0",
    "langchain-text-splitters>=0.2.0",
    "jieba>=0.42.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.27.0",
    "factory-boy>=3.3.0",
    "faker>=22.0.0",
    "aiosqlite>=0.19.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.8.0",
    "pre-commit>=3.7.0",
]

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle 错误
    "F",   # pyflakes
    "I",   # isort 导入排序
    "N",   # pep8-naming 命名规范
    "W",   # pycodestyle 警告
    "UP",  # pyupgrade 新版语法
    "B",   # flake8-bugbear 常见陷阱
    "C4",  # flake8-comprehensions 推导式优化
    "SIM", # flake8-simplify 代码简化
    "RUF", # Ruff 专属规则
]
ignore = [
    "E501",    # 行宽由 formatter 处理
    "RUF001",  # 中文字符串中的全角标点（本项目为中文项目，属预期）
    "RUF002",  # 中文 docstring 中的全角标点
    "RUF003",  # 中文注释中的全角标点
    "B008",    # FastAPI 惯用法：Depends(...) 作默认参数
    "N818",    # 异常类 AppException 命名为公共 API，改名属于破坏性变更
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "SIM117",  # 测试中的嵌套 with 提高可读性
    "SIM115",  # 测试读取 fixture 文件，生命周期由进程管理
    "B017",    # 测试需要断言宽泛异常
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=75",
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试（需要数据库等外部依赖）",
    "e2e: 端到端测试",
    "slow: 运行较慢的测试",
]
